# dn_live

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dongnaoedu/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dn_live.c
app/src/main/cpp/x264/include/: x264.h
app/src/main/java/com/dongnaoedu/live/: MainActivity.java
app/src/main/java/com/dongnaoedu/live/jni/: PushNative.java
app/src/main/java/com/dongnaoedu/live/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/dongnaoedu/live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dongnaoedu/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
